sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
	var debut = 0
	var fin = getNbreValeurs()-2
	var swapped = true

	do{
		swapped = false

		for(i<-debut to fin){
			if(plusPetit(i+1, i)){
				echange(i, i+1)
				swapped = true
				fin = fin-1
			}
		}

		for(i<-fin to debut by -1){
			if(plusPetit(i+1, i)){
				echange(i, i+1)
				swapped = true
				debut = debut+1
			}
		}
	}while(swapped)
}
